--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "main": "none",
   "name": "opensphere-state-schema",
   "scripts": {
-    "package:update": "if git diff --name-only ORIG_HEAD HEAD | grep --quiet package.json; then npm update && npm install; fi",
+    "package:update": "if git diff --name-only origin/HEAD HEAD | grep --quiet package.json; then npm update && npm install; fi",
     "test": "for i in src/main/xsd/*/*/*.xsd; do xmllint $i > out.log && echo \"valid XSD: $i\" || (echo \"bad XSD: $i\"; exit 1); done"
   },
   "version": "2.0.7"
