--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "type": "git",
     "url": "https://github.com/ngageoint/opensphere-state-schema.git"
   },
+  "husky": {
+    "hooks": {
+      "commit-msg": "validate-commit-msg"
+    }
+  },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    },
-    "ghooks": {
-      "commit-msg": "validate-commit-msg",
-      "post-merge": "npm run package:update",
-      "post-rewrite": "npm run package:update"
+      "path": "cz-conventional-changelog"
     },
     "validate-commit-msg": {
       "helpMessage": "\nPlease fix your commit message (consider using 'npm i -g commitizen'). Well-formatted commit messages allow us to automate our changelog and npm releases.\n\nExamples:\n\"fix(copy-view): Fixed an error when resolving paths for view directories\"\n\"feat(gcc): Added support for defines\"\n\nIf you have installed commitizen, try running 'git cz'."
@@ -19,10 +19,8 @@
   },
   "description": "OpenSphere state file schema",
   "devDependencies": {
-    "conventional-changelog-cli": "^1.2.0",
-    "conventional-recommended-bump": "^0.3.0",
     "cz-conventional-changelog": "^1.2.0",
-    "ghooks": "^1.3.2",
+    "husky": "^1.3.1",
     "validate-commit-msg": "^2.8.2"
   },
   "directories": {
