--- a/package.json
+++ b/package.json
@@ -1,5 +1,23 @@
 {
+  "name": "opensphere-state-schema",
+  "version": "2.4.0",
+  "description": "OpenSphere state file schema",
+  "main": "none",
+  "directories": {
+    "src": "src"
+  },
+  "scripts": {
+    "package:update": "if git diff --name-only ORIG_HEAD HEAD | grep --quiet package.json; then npm update && npm install; fi",
+    "test": "for i in src/main/xsd/*/*/*.xsd; do xmllint $i > out.log && echo \"valid XSD: $i\" || (echo \"bad XSD: $i\"; exit 1); done"
+  },
+  "keywords": [
+    "xsd",
+    "bits",
+    "OpenSphere",
+    "state"
+  ],
   "author": "Robert Kausch <rkausch@caci.com>",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/ngageoint/opensphere-state-schema.git"
@@ -17,27 +35,34 @@
       "helpMessage": "\nPlease fix your commit message (consider using 'npm i -g commitizen'). Well-formatted commit messages allow us to automate our changelog and npm releases.\n\nExamples:\n\"fix(copy-view): Fixed an error when resolving paths for view directories\"\n\"feat(gcc): Added support for defines\"\n\nIf you have installed commitizen, try running 'git cz'."
     }
   },
-  "description": "OpenSphere state file schema",
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      "@semantic-release/npm",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "package.json",
+            "CHANGELOG.md"
+          ],
+          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+        }
+      ],
+      "@semantic-release/github"
+    ]
+  },
   "devDependencies": {
+    "@semantic-release/changelog": "^3.0.4",
+    "@semantic-release/commit-analyzer": "^6.2.0",
+    "@semantic-release/git": "^7.0.16",
+    "@semantic-release/github": "^5.4.2",
+    "@semantic-release/npm": "^5.1.13",
+    "@semantic-release/release-notes-generator": "^7.2.1",
     "cz-conventional-changelog": "^1.2.0",
     "husky": "^1.3.1",
     "validate-commit-msg": "^2.8.2"
-  },
-  "directories": {
-    "src": "src"
-  },
-  "keywords": [
-    "xsd",
-    "bits",
-    "OpenSphere",
-    "state"
-  ],
-  "license": "Apache-2.0",
-  "main": "none",
-  "name": "opensphere-state-schema",
-  "scripts": {
-    "package:update": "if git diff --name-only ORIG_HEAD HEAD | grep --quiet package.json; then npm update && npm install; fi",
-    "test": "for i in src/main/xsd/*/*/*.xsd; do xmllint $i > out.log && echo \"valid XSD: $i\" || (echo \"bad XSD: $i\"; exit 1); done"
-  },
-  "version": "2.4.0"
+  }
 }
