--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "package:update": "if git diff --name-only ORIG_HEAD HEAD | grep --quiet package.json; then npm update && npm install; fi",
-    "test": "for i in src/main/xsd/*/*/*.xsd; do xmllint $i > out.log && echo \"valid XSD: $i\" || (echo \"bad XSD: $i\"; exit 1); done"
+    "test": "for i in src/main/xsd/*/*/*.xsd; do xmllint $i > out.log && echo \"valid XSD: $i\" || (echo \"bad XSD: $i\"; exit 1); done",
+    "semantic-release": "semantic-release"
   },
   "keywords": [
     "xsd",
