--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@semantic-release/release-notes-generator": "^7.2.1",
     "cz-conventional-changelog": "^1.2.0",
     "husky": "^1.3.1",
+    "semantic-release": "^15.13.18",
     "validate-commit-msg": "^2.8.2"
   }
 }
